tests/reject/newtype_key_mix.hi
# A newtype-keyed map rejects a raw base-typed key: "ana" is not a UserId.
type UserId = string

fn main():
    m : [UserId: int] = []
    m = map_set(m, "ana", 1)
    print(str(len(m)) + "\n")
